<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Inexpo</string>
    <string name="hello_world">Hello world!</string>
 	<string name="analyticsID">001</string>
 	<string name="menu_settings">Settings</string>
    <string name="title_activity_main">Push Notifications</string>
    <string name="error_config">Please set the %1$s constant and recompile the app.</string>
    <string name="already_registered">Device is already registered on server.</string>
    <string name="gcm_registered">From GCM: device successfully registered!</string>
    <string name="gcm_unregistered">From GCM: device successfully unregistered!</string>
    <string name="gcm_message">From GCM: you got message!</string>
    <string name="gcm_error">From GCM: error (%1$s).</string>
    <string name="gcm_recoverable_error">From GCM: recoverable error (%1$s).</string>
    <string name="gcm_deleted">From GCM: server deleted %1$d pending messages!</string>
    <string name="server_registering">Trying (attempt %1$d/%2$d) to register device on Demo Server.</string>
    <string name="server_registered">From Demo Server: successfully added device!</string>
    <string name="server_unregistered">From Demo Server: successfully removed device!</string>
    <string name="server_register_error">Could not register device on Demo Server after %1$d attempts.</string>
    <string name="server_unregister_error">Could not unregister device on Demo Server (%1$s).</string>
    <string name="options_register">Register</string>
    <string name="options_unregister">Unregister</string>
    <string name="options_clear">Clear</string>
    <string name="options_exit">Exit</string>
    
    <string name="stringstall">Stall</string>
    <string name="stringmap">Map</string>
    <string name="stringsponser">Sponser</string>
    <string name="stringcontact">Contact</string>
    <string name="stringnotification">Notification</string>
    
     <string name="off">off</string>
      <string name="on">on</string>
       <string name="summary_off">summaryoff</string>
        <string name="summary_on">summaryon</string>
    
    <!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_items">
        <item>Stall</item>
        <item>Notification</item>
        <item>Map</item>
        <item>Sponsers</item>
        <item>Contact</item>
     </string-array>

    <!-- Nav Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->
    <array name="nav_drawer_icons">
        <item>@drawable/ic_drawer</item>
        <item>@drawable/ic_drawer</item>
        <item>@drawable/ic_drawer</item>
        <item>@drawable/ic_drawer</item>
        <item>@drawable/ic_drawer</item>
    </array>
    
    
</resources>
